--- a/cellang-core/pom.xml
+++ b/cellang-core/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sb.sbook</groupId>
-	<artifactId>sbook-core</artifactId>
+	<groupId>com.stockbrother.cellang</groupId>
+	<artifactId>cellang-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>AnyReportCore</name>
+	<name>CellangCore</name>
 	<description></description>
 
 	<build>
