--- a/cellang-webclient/pom.xml
+++ b/cellang-webclient/pom.xml
@@ -9,9 +9,14 @@
 	<name>CellangWebclient</name>
 	<description></description>
 	<properties>
-		<gwt.version>2.7.0</gwt.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<sourceEncoding>UTF-8</sourceEncoding>
+		<gwt.version>2.8.0-beta1</gwt.version>
 	</properties>
+
 	<build>
+
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -49,7 +54,7 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>compile</goal>							
+							<goal>compile</goal>
 							<goal>test</goal>
 						</goals>
 					</execution>
@@ -59,6 +64,8 @@
 					<modules>
 						<module>org.cellang.webclient.gwt.CellangWebclient</module>
 					</modules>
+					<copyWebapp>true</copyWebapp>
+					<style>PRETY</style>
 				</configuration>
 			</plugin>
 		</plugins>
