--- a/cl-webc/pom.xml
+++ b/cl-webc/pom.xml
@@ -119,6 +119,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.cellang.core</groupId>
+			<artifactId>cl-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.fusesource.restygwt</groupId>
 			<artifactId>restygwt</artifactId>
 			<version>2.0.3</version>
