--- a/cl-webc/src/main/webapp/WEB-INF/web.xml
+++ b/cl-webc/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app
-    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app>
+	<servlet>
+		<servlet-name>transferServlet</servlet-name>
+		<servlet-class>org.cellang.core.commons.transfer.ajax.AjaxCometServlet
+		</servlet-class>
+		<init-param>
+			<param-name>maxIdleTime</param-name>
+			<param-value>600000</param-value>
+		</init-param>
+		<init-param>
+			<param-name>timeoutForFirstMessage</param-name>
+			<param-value>30000</param-value>
+		</init-param>		
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>transferServlet</servlet-name>
+		<url-pattern>/transfer/ajax</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>home.html</welcome-file>
 	</welcome-file-list>
+
 </web-app>
