--- a/cl-core/pom.xml
+++ b/cl-core/pom.xml
@@ -8,7 +8,9 @@
 	<packaging>jar</packaging>
 	<name>CellangCore</name>
 	<description></description>
-
+	<properties>
+		<jetty.version>9.3.10.M0</jetty.version>
+	</properties>
 	<build>
 		<resources>
 			<resource>
@@ -33,7 +35,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
+					<source>1.7</source>
 					<target>1.7</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
@@ -96,7 +98,12 @@
 			<artifactId>commons-jexl</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.httpunit</groupId>
+			<artifactId>httpunit</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
