--- a/cl-webc/pom.xml
+++ b/cl-webc/pom.xml
@@ -66,7 +66,7 @@
 						<module>org.cellang.webc.main.Module</module>
 					</modules>
 					<copyWebapp>true</copyWebapp>
-					<style>PRETY</style>
+					<style>PRETTY</style>
 				</configuration>
 			</plugin>
 		</plugins>
