--- a/cl-webc/pom.xml
+++ b/cl-webc/pom.xml
@@ -8,44 +8,78 @@
 	<packaging>jar</packaging>
 	<name>CellangWebclient</name>
 	<description></description>
-	
+
 	<parent>
 		<groupId>org.cellang</groupId>
 		<artifactId>parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		
+
 	</properties>
 
 	<build>
 
 		<plugins>
-			
-			
+
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*ClientStartGwtTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
 				<version>${gwt.version}</version>
 				<executions>
 					<execution>
+						<phase>package</phase>
 						<goals>
 							<goal>compile</goal>
 							<goal>test</goal>
 						</goals>
 					</execution>
+					
 				</executions>
 				<configuration>
+					<includes>**/*GwtTest.java</includes>
 					<runTarget>home.html</runTarget>
 					<modules>
 						<module>org.cellang.webc.main.Module</module>
 					</modules>
 					<copyWebapp>true</copyWebapp>
 					<style>PRETTY</style>
+					
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/www-test</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/test/webapp</directory>
+									<filtering>false</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 
@@ -63,7 +97,7 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -105,7 +139,7 @@
 			<version>1.1.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
