--- a/cl-core/pom.xml
+++ b/cl-core/pom.xml
@@ -62,6 +62,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
